--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,12 +2,50 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <meta name="description" content="Real-Time Event Ticketing System" />
+    <title>Real-Time Event Ticketing System</title>
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+
+    <!-- Google Fonts -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap"
+      rel="stylesheet"
+    />
+
+    <!-- Styles -->
+    <style>
+      /* Body Styles */
+      body {
+        margin: 0;
+        padding: 0;
+        font-family: 'Poppins', sans-serif;
+        background: linear-gradient(135deg, #007bff, #6fe7dd);
+        color: #333;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        min-height: 100vh;
+      }
+
+      /* Root div styling */
+      #root {
+        width: 100%;
+        max-width: 1200px;
+        background: #ffffff;
+        box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+        border-radius: 12px;
+        padding: 20px;
+      }
+    </style>
   </head>
   <body>
+    <!-- Root Div -->
     <div id="root"></div>
+
+    <!-- Main Entry Script -->
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
