--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,7 +7,7 @@
     <title>Real-Time Event Ticketing System</title>
 
     <!-- Favicon -->
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" href="./src/assets/logo.png" type="image/png" />
 
     <!-- Google Fonts -->
     <link
